--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Maven+Pro|Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
+
 
 body {
  margin: 0; 
- max-width: 100%;
+ max-width: 100vw;
  overflow-x: hidden; 
 }
 
@@ -16,6 +19,10 @@ body {
     font-family: 'Amatic SC', cursive;
     font-size: 30px;
     font-weight: 800;
+}
+
+h1 {
+  font-family: 'Kaushan Script', cursive;
 }
 
 .imagens { 
@@ -35,7 +42,7 @@ body {
   -ms-flex: auto;
   flex: auto; 
   width: 200px; 
-  margin: .5vw; 
+  margin: 1.5vw; 
 }
 
 .imagens div img { 
@@ -55,7 +62,11 @@ body {
 @media screen and (max-width: 400px) {
   .imagens div { margin: 0; }
   .imagens { padding: 0; }
-  
+}
+
+@media screen and (max-width: 400px) {
+  .imagens div { margin: 0; }
+  .imagens { padding: 0; }
 }
 
 
@@ -82,7 +93,7 @@ a:hover
   position: absolute;
   top: 25px;
   right: 25px;
-  z-index: 1;
+  z-index: 12;
   -webkit-user-select: none;
   user-select: none;
 }
@@ -172,34 +183,57 @@ a:hover
 #menu
 {
   position: absolute;
-  width: 300px;
-  margin: -100px 0 0 150px;
+  width: 250px;
+  margin: -100px 0 0 -300px;
   padding: 50px;
   padding-top: 100px;
-  
-  background: #ededed;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f2f2f2+100 */
+background: rgb(255,255,255); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(242,242,242,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(242,242,242,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(242,242,242,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
+  border-style: round;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
+
   
   transform-origin: 0% 0%;
-  transform: translate(0, 0);
+  transform: translate(120%, 0);
   
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu li
-{
+
+@media screen and (max-width: 570px) {
+  #menu {
+    transform: translate(0, -120%);
+    border-bottom-left-radius: 90px;
+    width: 125px;
+    margin: -100px 0 0 -168px;
+    border-top-left-radius: 250px;
+  }
+}
+
+
+#menu li {
   padding: 10px 0;
   font-size: 22px;
 }
 
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: translate(-100%, 0);
+#menuToggle input:checked ~ ul {
+  transform: translate(0, 0);
+}
+
+.menuOverlay {
+    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(100, 100, 100, 0.61);
+    z-index: 9;
+    top: 0;
 }
 
 
@@ -276,4 +310,40 @@ a:hover
   100% {
     transform: scale(0.9);
   }
+}
+
+
+
+/**Footer**/
+
+footer {
+  margin: 0 auto;
+  width: 100%;
+  background: #ffffff;
+  border-top: 0.0625em solid lightgrey;
+  bottom: 0;
+  color: #000000;
+  height: 2em;
+}
+footer:before,
+footer:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+footer p {
+  float: left;
+  text-align: center;
+  width: 100%;
+  font-family: 'Maven Pro', sans-serif;
+}
+
+
+.sobre {
+  margin: 10px;
+}
+
+.sobre-nos{
+  font-family: 'Open-Sans', sans-serif;
+  text-align: justify;
 }
